--- a/Models/Tokenizers/2024.12.16_SECodec.md
+++ b/Models/Tokenizers/2024.12.16_SECodec.md
@@ -68,12 +68,12 @@ Code, demo speeches, speech feature graph, SE codebook, and models are available
 ## 1·Introduction: 引言
 
 Large language models (LLMs) ([GPT-4](../TextLM/2023.03.15_GPT-4.md); [LLaMA](../TextLM/2023.02.27_LLaMA.md)) have exhibited exceptional capabilities in a wide range of natural language processing tasks.
-This success has spurred extensive research efforts in developing speech language models ([SpeechTokenizer](../SpeechCodec/2023.08.31_SpeechTokenizer.md); [RepCodec](../SpeechCodec/2023.08.31_RepCodec.md); [AudioLM](../SpeechLM/2022.09.07_AudioLM.md)), leading to notable advancements in numerous speech processing applications~\cite{wang2023neural,tu2024smart,rubenstein2023audiopalm,dong2023polyvoice,tu2023view}.
+This success has spurred extensive research efforts in developing speech language models ([SpeechTokenizer](2023.08.31_SpeechTokenizer.md); [RepCodec](2023.08.31_RepCodec.md); [AudioLM](../SpeechLM/ST2S/2022.09.07_AudioLM.mdLM.md)), leading to notable advancements in numerous speech processing applications~\cite{wang2023neural,tu2024smart,rubenstein2023audiopalm,dong2023polyvoice,tu2023view}.
 To bridge the gap between continuous speech and token-based language models, a crucial method called speech discretization is employed.
 This process transforms an audio signal into a finite set of tokens.
 By converting speech into discrete tokens, language models are able to predict future semantic content and generate coherent and realistic speech with long-term consistency~\cite{nguyen2022discrete,tu20222}.
 
-Current discrete speech representations for speech language models can be categorized into three types: semantic tokens, acoustic tokens, and hybrid/unified tokens ([AudioLM](../SpeechLM/2022.09.07_AudioLM.md); [SpeechTokenizer](../SpeechCodec/2023.08.31_SpeechTokenizer.md)).
+Current discrete speech representations for speech language models can be categorized into three types: semantic tokens, acoustic tokens, and hybrid/unified tokens ([AudioLM](../SpeechLM/ST2S/2022.09.07_AudioLM.mdLM.md); [SpeechTokenizer](2023.08.31_SpeechTokenizer.md)).
 1) Semantic tokens~\cite{hsu2021hubert,baevski2020wav2vec,chung2021w2v} are typically generated from self-supervised pre-trained models using masked language modeling as the training objective, which are derived through $k$-means clustering on representations from a specific intermediate layer, resulting in sequences with a one-dimensional structure.
 Speech language models that use semantic tokens~\cite{lakhotia2021generative,zhang2023speechgpt,hassid2024textually} can be externally connected to a vocoder for speech synthesis.
 While these models effectively capture semantically accurate content, the resulting speech generation often suffers from poor quality and a loss of acoustic details.
@@ -81,9 +81,9 @@ While these models effectively capture semantically accurate content, the result
 By employing residual vector quantization (RVQ)~\cite{gray1984vector,vasuki2006review} with hierarchical quantizers for discretization, acoustic tokens are represented as matrices with two dimensions: timesteps and quantizers.
 VALL-E~\cite{wang2023neural} is a representative model of speech language models that utilize acoustic tokens.
 Despite achieving impressive zero-shot text-to-speech (TTS) capabilities, it still faces issues such as inaccurate content, stemming from the complex information contained within acoustic tokens.
-1) Hybrid or unified tokens~\cite{[AudioLM](../SpeechLM/2022.09.07_AudioLM.md); [SpeechTokenizer](../SpeechCodec/2023.08.31_SpeechTokenizer.md)} employ different strategies to combine semantic tokens and acoustic tokens.
-Hybrid tokens adopt a hierarchical approach, encompassing both semantic token language models and acoustic token language models, to capture content information and acoustic details, respectively~\cite{dong2023polyvoice,[AudioLM](../SpeechLM/2022.09.07_AudioLM.md)q ,rubenstein2023audiopalm}.
-Recently, unified tokens, exemplified by [SpeechTokenizer](../SpeechCodec/2023.08.31_SpeechTokenizer.md), have emerged.
+1) Hybrid or unified tokens~\cite{[AudioLM](../SpeechLM/ST2S/2022.09.07_AudioLM.mdLM.md); [SpeechTokenizer](2023.08.31_SpeechTokenizer.md)} employ different strategies to combine semantic tokens and acoustic tokens.
+Hybrid tokens adopt a hierarchical approach, encompassing both semantic token language models and acoustic token language models, to capture content information and acoustic details, respectively~\cite{dong2023polyvoice,[AudioLM](../SpeechLM/ST2S/2022.09.07_AudioLM.mdLM.md)q ,rubenstein2023audiopalm}.
+Recently, unified tokens, exemplified by [SpeechTokenizer](2023.08.31_SpeechTokenizer.md), have emerged.
 These tokens distill semantic information into acoustic tokens, effectively unifying semantic and acoustic representations.
 SpeechTokenizer has achieved superior results in downstream tasks such as speech synthesis.
 The ideal speech representation for speech language models should meet two key characteristics: i) Effective preservation of speech information; ii) Sufficient compressiveness for efficient training of speech language models.
@@ -307,15 +307,15 @@ To prevent the discriminator from becoming too dominant, we only update it when 
 
 ### Baselines
 
-For ***SECodec***, we consider two baselines: 1) EnCodec~\cite{defossez2022high}, and 2) [SpeechTokenizer](../SpeechCodec/2023.08.31_SpeechTokenizer.md), a state-of-the-art speech tokenizer for speech language models.
-For ***SESLM***, we consider two baselines: 1) VALL-E~\cite{wang2023neural}, and 2) ULSM ([SpeechTokenizer](../SpeechCodec/2023.08.31_SpeechTokenizer.md)).
+For ***SECodec***, we consider two baselines: 1) EnCodec~\cite{defossez2022high}, and 2) [SpeechTokenizer](2023.08.31_SpeechTokenizer.md), a state-of-the-art speech tokenizer for speech language models.
+For ***SESLM***, we consider two baselines: 1) VALL-E~\cite{wang2023neural}, and 2) ULSM ([SpeechTokenizer](2023.08.31_SpeechTokenizer.md)).
 
 ### Metrics
 
 For speech reconstruction evaluation, we randomly sampled 300 speech samples from the LibriSpeech test set, considering both subjective and objective evaluation metrics.
 For objective metrics, we used mel-cepstrum distortion (MCD)~\cite{toda2007voice}, root mean square errors (RMSE)~\cite{luo2017emotional}, and ViSQOL~\cite{hines2015visqol} to assess speech quality.
 Additionally, we evaluated content accuracy through Word Error Rate (WER) by transcribing the speech using the Whisper en-medium model~\cite{radford2023robust}.
-For subjective metrics, we use MUSHRA following [SpeechTokenizer](../SpeechCodec/2023.08.31_SpeechTokenizer.md).
+For subjective metrics, we use MUSHRA following [SpeechTokenizer](2023.08.31_SpeechTokenizer.md).
 
 For evaluating ***SESLM***, we perform zero-shot text-to-speech assessments using the VCTK~\cite{veaux2016superseded} dataset, which includes recordings from 108 speakers with no overlap between the training data and the VCTK dataset.
 For each speaker, we randomly select a 3-second utterance as the prompt and use the text from a different utterance as the input.
