--- a/Models/Tokenizers/2024.12.02_FreeCodec.md
+++ b/Models/Tokenizers/2024.12.02_FreeCodec.md
@@ -63,19 +63,19 @@ Neural speech codecs are widely used to compress speech signals for a limited nu
 Compared to traditional parametric algorithms ([Codec2 [1]](Codec2.md); [MELP [2]](1997.04.21_MELP.md)), it has progressed significantly in medium- or low-bitrate scenarios.
 With the development of large language models (LLM), the discrete codes of neural speech codecs also play a pivotal role in LLM-driven generative speech models.
 
-Existing mainstream end-to-end (E2E) works ([SoundStream [3]](2021.07.07_SoundStream.md); [EnCodec [4]](2022.10.24_EnCodec.md); [TF-Codec [5]](2022.07.18_TF-Codec.md); [SuperCodec [6]](2024.07.30_SuperCodec.md); [CBRC [7]](2024.02.02_CBRC.md); [WavTokenizer [8]](2024.08.29_WavTokenizer.md)) rely on the [VQ-VAE [9]](../../Modules/VQ/2017.11.02_VQ-VAE.md) architecture to learn an encoder, a vector quantizer, and a decoder by data-driven.
+Existing mainstream end-to-end (E2E) works ([SoundStream [3]](2021.07.07_SoundStream.md); [EnCodec [4]](2022.10.24_EnCodec.md); [TF-Codec [5]](2022.07.18_TF-Codec.md); [SuperCodec [6]](2024.07.30_SuperCodec.md); [CBRC [7]](2024.02.02_CBRC.md); [WavTokenizer [8]](../Tokenizer/2024.08.29_WavTokenizer.md)) rely on the [VQ-VAE [9]](../../Modules/VQ/2017.11.02_VQ-VAE.md) architecture to learn an encoder, a vector quantizer, and a decoder by data-driven.
 These techniques utilize vector quantization to compress or discrete the latent features from the encoder.
-Many researches ([CBRC [7]](2024.02.02_CBRC.md); [HiFi-Codec [10]](2023.05.04_HiFi-Codec.md); [Descript-Audio-Codec (DAC) [11]](2023.06.11_Descript-Audio-Codec.md); [SRCodec [12]](2024.03.18_SRCodec.md)) are based on optimizing vector quantization to improve the reconstructed speech quality.
+Many researches ([CBRC [7]](2024.02.02_CBRC.md); [HiFi-Codec [10]](2023.05.04_HiFi-Codec.md); [Descript-Audio-Codec (DAC) [11]](2023.06.11_Descript-Audio-Codec.md); [SRCodec [12]](../Tokenizer/2024.03.18_SRCodec.md)) are based on optimizing vector quantization to improve the reconstructed speech quality.
 For instance, [SoundStream [3]](2021.07.07_SoundStream.md) introduces a residual vector quantizer (RVQ) into neural speech codecs to achieve state-of-the-art (SOTA) performance from 3 to 18 kbps.
 It is more efficient and has lower complexity than the plain vector quantizer.
 In [HiFi-Codec [10]](2023.05.04_HiFi-Codec.md), the group-residual vector quantization (GRVQ) is proposed for enjoying better performance while containing four quantizers at 2 kbps.
 Furthermore, [Descript-Audio-Codec (DAC) [11]](2023.06.11_Descript-Audio-Codec.md) introduces factorized and L2-normalized codes to improve codebook usage, operating a higher compression rate than [EnCodec [4]](2022.10.24_EnCodec.md).
 However, when using two codebooks even less, the performance of these methods is struggling, like content loss resulting in unintelligible.
 
-Several works ([Polyak et al [13]](2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md); [Omran et al [14]](../_Full/2022.03.29_Disentangling_Speech_from_Surroundings_with_Neural_Embeddings.md); [TiCodec [15]](2023.09.15_TiCodec.md); [SpeechTokenizer [16]](2023.08.31_SpeechTokenizer.md); [Single-Codec [17]](2024.06.11_Single-Codec.md); [SemantiCodec [18]](2024.04.30_SemantiCodec.md)) have explored speech reconstruction with the disentangled feature under the VQ-VAE paradigm.
+Several works ([Polyak et al [13]](2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md); [Omran et al [14]](../_Full/2022.03.29_Disentangling_Speech_from_Surroundings_with_Neural_Embeddings.md); [TiCodec [15]](../Tokenizer/2023.09.15_TiCodec.md); [SpeechTokenizer [16]](2023.08.31_SpeechTokenizer.md); [Single-Codec [17]](2024.06.11_Single-Codec.md); [SemantiCodec [18]](2024.04.30_SemantiCodec.md)) have explored speech reconstruction with the disentangled feature under the VQ-VAE paradigm.
 Similar to voice conversion (VC), these methods disentangle a global speaker identity and content representations.
 [Polyak et al [13]](2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md) utilizes a pretrained self-supervised learning models to disentangle content information at small datasets.
-Recently, [TiCodec [15]](2023.09.15_TiCodec.md) explores an additional global encoder to extract time-invariant information out of speech.
+Recently, [TiCodec [15]](../Tokenizer/2023.09.15_TiCodec.md) explores an additional global encoder to extract time-invariant information out of speech.
 It reduces the redundancy of frame-level information to attain improved encoding efficiency and exhibits improved performance using one or two tokens.
 However, speech includes several attributes(not just global and non-global), and each of them should be modeled using a module ([Mega-TTS [19]](../SpeechLM/2023.06.06_Mega-TTS.md)).
 Inspired by this, we explore a more detailed disentanglement of representations framework for better reconstruction.
@@ -114,7 +114,7 @@ The details of training strategies are described in Section \ref{quantization} a
 Existing approaches extract a global embedding in the encoder in an unsupervised manner, and then the decoder aggregates the global embedding into the frame-level embeddings.
 They assume that the global embedding can represent time-invariant information, such as the characteristics of the speaker and speaking style.
 Here, we follow this unsupervised manner and further extract the speaker's information more precisely.
-We utilize a pre-trained speaker encoder, [ECAPA-TDNN [20]](../_tmp/ECAPA-TDNN.md), a state-of-the-art speaker recognition network based on convolution neural networks with an attentive statistics pooling layer.
+We utilize a pre-trained speaker encoder, [ECAPA-TDNN [20]](../_tmp/2020.05.14_ECAPA-TDNN.md), a state-of-the-art speaker recognition network based on convolution neural networks with an attentive statistics pooling layer.
 The mel-spectrogram sampled from the raw speech signal is fed into the speaker encoder to get one global timbre vector.
 
 #### Content Encoder
@@ -126,7 +126,7 @@ In order to reduce the redundancy of the content encoder, we propose to use a se
 #### Prosody Encoder
 
 The prosody encoder extracts the information apart from the speaker and content information, as shown in Fig.\ref{b}.
-In [ProsoSpeech [21]](../_tmp/2022.02.16_ProsoSpeech.md); [Mega-TTS2 [22]](../SpeechLM/2023.07.14_Mega-TTS2.md), the first 20 bins in each mel-spectrogram frame are taken as input to extract prosody because it contains almost complete prosody and much less speaker and content information than the full band.
+In [ProsoSpeech [21]](../Acoustic/2022.02.16_ProsoSpeech.md); [Mega-TTS2 [22]](../SpeechLM/2023.07.14_Mega-TTS2.md), the first 20 bins in each mel-spectrogram frame are taken as input to extract prosody because it contains almost complete prosody and much less speaker and content information than the full band.
 Following the related work ([Mega-TTS2 [22]](../SpeechLM/2023.07.14_Mega-TTS2.md)), we adopt the prosody encoder consisting of two convolution stacks, a max pooling layer with a stride of 8 to remove content and speaker information further.
 Our proposed method sets the FFT and hop size to 1024 and 320.
 With these setups, the prosody encoder results in roughly a frame rate of 7 Hz feature embeddings with 256 dimensions.
@@ -169,7 +169,7 @@ For a fair comparison, we adopt two recent neural codecs, [TiCodec [Github]](htt
 The baselines are re-trained with 1 and 2 codebooks, indicating 0.5 kbps and 1 kbps.
 ***FreeCodec*** and TiCodec are trained on two V100 GPUs with 400 k iterations and batchsize of 20 per GPU.
 DAC is trained on two V100 GPUs with 800 k iterations and batchsize of 10 per GPU.
-In addition, we also consider several open-source speech codecs as baselines,  [EnCodec [Github]](https://github.com/facebookresearch/encodec) at 3 kbps, and [Lyra-v2 [Github]](https://github.com/google/lyra) at 3.2 kbps, and [SpeechTokenizer [16]](2023.08.31_SpeechTokenizer.md) at 3 kbps, and [SemantiCodec [18]](2024.04.30_SemantiCodec.md) at 1.3 kbps, and [WavTokenizer-small [8]](2024.08.29_WavTokenizer.md) at 0.9 kbps.
+In addition, we also consider several open-source speech codecs as baselines,  [EnCodec [Github]](https://github.com/facebookresearch/encodec) at 3 kbps, and [Lyra-v2 [Github]](https://github.com/google/lyra) at 3.2 kbps, and [SpeechTokenizer [16]](2023.08.31_SpeechTokenizer.md) at 3 kbps, and [SemantiCodec [18]](2024.04.30_SemantiCodec.md) at 1.3 kbps, and [WavTokenizer-small [8]](../Tokenizer/2024.08.29_WavTokenizer.md) at 0.9 kbps.
 For Encodec and Wavtokenizer-small, we use the 24 kHz pre-trained model to synthesize speech, corresponding to the same compression rate of 2 kbps and 0.6 kbps for the 16 kHz sampling rate, respectively.
 
 As for the voice conversion, three baseline models are selected to be compared with ***FreeCodec-v3***:
@@ -200,7 +200,7 @@ In addition, we also adopt the [Speex [35]](2016.02.28_Speex.md) at 4 kbps as ou
 
 #### Objective Evaluation
 
-For objective evaluation of reconstruction, we employ the automatic Mean Opinion Score prediction system ([UTMOS [36]](../../Evaluations/2022.04.05_UTMOS.md)), and the short-time objective intelligibility ([STOI [38]](../../Evaluations/STOI.md)), and the [WARP-Q [37]](../../Evaluations/WARP-Q.md), and the Speaker Embedding Cosine Similarity ([SECS [Github]](https://github.com/resemble-ai/Resemblyzer)) to evaluate the overall speech quality.
+For objective evaluation of reconstruction, we employ the automatic Mean Opinion Score prediction system ([UTMOS [36]](../../Evaluations/2022.04.05_UTMOS.md)), and the short-time objective intelligibility ([STOI [38]](../../Evaluations/2010.03.14_STOI.md)), and the [WARP-Q [37]](../../Evaluations/WARP-Q.md), and the Speaker Embedding Cosine Similarity ([SECS [Github]](https://github.com/resemble-ai/Resemblyzer)) to evaluate the overall speech quality.
 In addition, we use Word error rate (WER), character error rate (CER), and F0-PCC to evaluate the objective evaluation of voice conversion.
 Among them, WER and CER between source and converted speech are calculated by an ASR model ([HuggingFace](https://huggingface.co/openai/whisper-large)).
 F0-PCC is the Pearson correlation coefficient used to evaluate ${f}_{0}$ consistency between source and converted speech.
