--- a/Models/-ASR/2024.09.26_Paraformer-v2.md
+++ b/Models/-ASR/2024.09.26_Paraformer-v2.md
@@ -22,11 +22,17 @@
 
 ## Abstract: 摘要
 
+<table><tr><td width="50%">
+
 Attention-based encoder-decoder, e.g., transformer and its variants, generates the output sequence in an autoregressive (AR) manner.
 Despite its superior performance, AR model is computationally inefficient as its generation requires as many iterations as the output length.
-In this paper, we propose ***Paraformer-v2***, an improved version of ***Paraformer***, for fast, accurate, and noise-robust non-autoregressive speech recognition.
-In ***Paraformer-v2***, we use a CTC module to extract the token embeddings, as the alternative to the continuous integrate-and-fire module in ***Paraformer***.
-Extensive experiments demonstrate that ***Paraformer-v2*** outperforms ***Paraformer*** on multiple datasets, especially on the English datasets (over 14% improvement on WER), and is more robust in noisy environments.
+In this paper, we propose ***Paraformer-v2***, an improved version of **Paraformer**, for fast, accurate, and noise-robust non-autoregressive speech recognition.
+In ***Paraformer-v2***, we use a CTC module to extract the token embeddings, as the alternative to the continuous integrate-and-fire module in **Paraformer**.
+Extensive experiments demonstrate that ***Paraformer-v2*** outperforms **Paraformer** on multiple datasets, especially on the English datasets (over 14% improvement on WER), and is more robust in noisy environments.
+
+</td><td>
+
+</td></tr></table>
 
 ## 1·Introduction: 引言
 
