--- a/Models/-ASR/2025.01.24_FireRedASR.md
+++ b/Models/-ASR/2025.01.24_FireRedASR.md
@@ -22,8 +22,7 @@
 
 ## Abstract: 摘要
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 We present ***FireRedASR***, a family of large-scale automatic speech recognition (ASR) models for Mandarin, designed to meet diverse requirements in superior performance and optimal efficiency across various applications.
 ***FireRedASR*** comprises two variants:
@@ -41,8 +40,7 @@ It offers a more compact size, making it suitable for resource-constrained appli
 Moreover, both models exhibit competitive results on Chinese dialects and English speech benchmarks and excel in singing lyrics recognition.
 To advance research in speech processing, we release our models and inference code at [Github](https://github.com/FireRedTeam/FireRedASR).
 
-</details>
-<br>
+</td><td>
 
 我们展示 ***FireRedASR***, 一系列适用于中文的大型自动语音识别模型, 旨在满足各种应用场景的高性能和最优效率的需求.
 ***FireRedASR*** 由两个变体组成:
@@ -59,10 +57,14 @@ To advance research in speech processing, we release our models and inference co
 除此之外, 两个模型都在中文方言和英语语音基准上表现出了竞争力的结果, 并在歌词识别方面展现出了优势.
 为了促进语音处理的研究, 我们在 [Github](https://github.com/FireRedTeam/FireRedASR) 上发布了我们的模型和推理代码.
 
+</td></tr></table>
+
 ## 1·Introduction: 引言
 
+<table><tr><td width="50%">
+
 Automatic Speech Recognition (ASR) has evolved rapidly in recent years, becoming an essential component in intelligent voice interaction and multimedia content understanding.
-Recent advances in ASR have led to several large-scale models, such as [Whisper](../SpeechLM/2022.12.06_Whisper.md)[^1], [Qwen-Audio](../SpokenDialogue/2023.11.14_Qwen-Audio.md)[^2],  [Qwen2-Audio](../SpokenDialogue/2024.07.15_Qwen2-Audio.md)[^3], [SenseVoice](2024.07.04_SenseVoice.md)[^4], and [Seed-ASR](2024.07.05_Seed-ASR.md)[^5], showing a paradigm shift from end-to-end models with millions of parameters ([Survey by Li et al. (2022)](../../Surveys/Recent_Advances_in_End-to-End_Automatic_Speech_Recognition.md)[^6]; [Survey by Prabhavalkar et al. (2023)](../../Surveys/End-to-End_Speech_Recognition__A_Survey.md)[^7]) to larger-scale models ([Whisper](../SpeechLM/2022.12.06_Whisper.md)[^1]; [FunAudioLLM](../SpeechLM/2024.07.04_FunAudioLLM.md)[^4]; [Google USM](../SpeechLM/2023.03.02_Google_USM.md)[^8]; [TouchASP](../_Basis/2024.12.20_TouchASP.md)[^9]) and the integration of pre-trained text LLMs ([Qwen-Audio](../SpokenDialogue/2023.11.14_Qwen-Audio.md)[^2]; [Qwen2-Audio](../SpokenDialogue/2024.07.15_Qwen2-Audio.md)[^3]; [Seed-ASR](2024.07.05_Seed-ASR.md)[^5]; [Speech-LLaMA](2023.07.08_Speech-LLaMA.md)[^10]; [AudioPaLM](../SpeechLM/2023.06.22_AudioPaLM.md)[^11]; [Second-Pass Reranking & Deep LLM-Fusion](2023.06.28_Prompting_LLMs_for_Zero-Shot_Domain_Adaptation_in_Speech_Recognition.md)[^12]; [SLM](../SpeechLM/2023.09.30_SLM.md)[^13]; [COSMIC](../SpeechLM/2023.11.03_COSMIC.md)[^14]; [^15], [SALM](../SpeechLM/2023.10.13_SALM.md)[^16],[^17],[^18], [SLAM-ASR](2024.02.13_SLAM-ASR.md)[^19]).
+Recent advances in ASR have led to several large-scale models, such as **Whisper**[^1], **Qwen-Audio**[^2],  **Qwen2-Audio**[^3], **SenseVoice**[^4], and **Seed-ASR**[^5], showing a paradigm shift from end-to-end models with millions of parameters (**Survey** by Li et al. (2022)[^6]; **Survey** by Prabhavalkar et al. (2023)[^7]) to larger-scale models (**Whisper**[^1]; **FunAudioLLM**[^4]; **Google USM**[^8]; **TouchASP**[^9]) and the integration of pre-trained text LLMs (**Qwen-Audio**[^2]; **Qwen2-Audio**[^3]; **Seed-ASR**[^5]; **Speech-LLaMA**[^10]; **AudioPaLM**[^11]; [Second-Pass Reranking & Deep LLM-Fusion](2023.06.28_Prompting_LLMs_for_Zero-Shot_Domain_Adaptation_in_Speech_Recognition.md)[^12]; **SLM**[^13]; **COSMIC**[^14]; [^15], **SALM**[^16]; [^17], [^18], **SLAM-ASR**[^19]).
 
 Despite their impressive capabilities and larger model sizes, they face significant limitations in practical applications.
 Some models prioritize multilingual and multitask capabilities, resulting in suboptimal performance for specific languages like Mandarin.
@@ -71,10 +73,10 @@ The growing demands for modern speech interaction systems, highlighted by GPT-4o
 
 To address these limitations, in this technical report, we introduce ***FireRedASR***, a family of large-scale models for Mandarin ASR.
 To address varying needs in performance and efficiency across a wide range of application scenarios, ***FireRedASR*** consists of two variants: ***FireRedASR-LLM*** and ***FireRedASR-AED***.
-***FireRedASR-LLM*** utilizes an innovative Encoder-Adapter-LLM framework ([Seed-ASR](2024.07.05_Seed-ASR.md)[^5]; [Speech-LLaMA](2023.07.08_Speech-LLaMA.md)[^10]; [^18]; [SLAM-ASR](2024.02.13_SLAM-ASR.md)[^19]), comprising 8.3B parameters to push the boundary of recognition accuracy.
+***FireRedASR-LLM*** utilizes an innovative Encoder-Adapter-LLM framework (**Seed-ASR**[^5]; **Speech-LLaMA**[^10]; [^18]; **SLAM-ASR**[^19]), comprising 8.3B parameters to push the boundary of recognition accuracy.
 This model is particularly well-suited for scenarios where precision is paramount and computational resources are not a primary constraint.
 ***FireRedASR-AED***, on the other hand, is designed to balance superior performance and optimal efficiency.
-It employs an Attention-based Encoder-Decoder (AED) architecture ([^22], [LAS](2015.08.05_LAS.md)[^23]) with up to 1.1B parameters.
+It employs an Attention-based Encoder-Decoder (AED) architecture ([^22], **LAS**[^23]) with up to 1.1B parameters.
 Beyond its standalone use, ***FireRedASR-AED*** also functions as a crucial speech representation component within larger LLM-based speech frameworks.
 
 Key contributions of our work include:
@@ -93,22 +95,34 @@ Section 3 presents comprehensive evaluation results across various benchmarks an
 Section 4 discusses the key factors contributing to our superior performance.
 Section 5 concludes the report.
 
+</td><td>
+
+</td></tr></table>
+
 ## 2·Related Works: 相关工作
 
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
 
 In this section, we present the architectural details and methodologies for our two ASR models: ***FireRedASR-AED*** and ***FireRedASR-LLM***.
 ***FireRedASR-AED*** follows the conventional Attention-based Encoder-Decoder architecture, whereas ***FireRedASR-LLM*** is built on the Encoder-Adapter-LLM architecture that leverages the power of LLM for ASR.
 Both models share similar input feature processing and acoustic encoding strategies but differ in their approaches to token sequence modeling.
 
+</td><td>
+
+</td></tr></table>
+
 ### FireRedASR-AED: Attention-based Encoder-Decoder ASR model
 
-***FireRedASR-AED*** adopts an end-to-end architecture that combines a Conformer-based Encoder (Enc) with a Transformer-based Decoder (Dec) ([Conformer](2020.05.16_Conformer.md)[^24], [Transformer](../_Transformer/2017.06.12_Transformer.md)[^25]).
+<table><tr><td width="50%">
+
+***FireRedASR-AED*** adopts an end-to-end architecture that combines a Conformer-based Encoder (Enc) with a Transformer-based Decoder (Dec) (**Conformer**[^24], **Transformer**[^25]).
 This design choice leverages both the ability of Conformer to model local and global dependencies in speech features and the effectiveness of Transformer in sequence transduction.
 The overall architecture of ***FireRedASR-AED*** is illustrated in Figure \ref{img:llm_asr} (bottom right).
 
 **Training Data**: The training corpus consists of approximately 70,000 hours of audio data, predominantly high-quality Mandarin Chinese speech.
-Unlike weakly-labeled datasets used in Whisper, the majority of our data was manually transcribed by professional annotators, ensuring high transcription accuracy and reliability.
+Unlike weakly-labeled datasets used in **Whisper**, the majority of our data was manually transcribed by professional annotators, ensuring high transcription accuracy and reliability.
 The dataset also incorporates approximately 11,000 hours of English speech data to enhance English ASR capabilities.
 
 **Input Features**: The input features are 80-dimensional log Mel filterbank (Fbank) extracted from 25ms windows with 10ms frame shifts, followed by global mean and variance normalization.
@@ -117,7 +131,7 @@ The dataset also incorporates approximately 11,000 hours of English speech data 
 The subsampling module employs two sequential convolutional layers, each with a stride of 2 and a kernel size of 3, followed by ReLU activation functions.
 This configuration reduces the temporal resolution from 10ms to 40ms per frame, effectively managing computational complexity while preserving essential acoustic information.
 The subsampled features are then processed by a stack of Conformer blocks.
-Each Conformer block consists of four primary components: two Macaron-style feedforward modules positioned at the beginning and end of the block, a multi-head self-attention module incorporating relative positional encoding ([Transformer-XL](../_Transformer/Transformer-XL.md)[^26]), and a convolution module equipped with gated linear unit (GLU) and layer normalization.
+Each Conformer block consists of four primary components: two Macaron-style feedforward modules positioned at the beginning and end of the block, a multi-head self-attention module incorporating relative positional encoding (**Transformer-XL**[^26]), and a convolution module equipped with gated linear unit (GLU) and layer normalization.
 The kernel size for all 1-D depthwise convolution is set to 33.
 This structure enables effective modeling of both local and global dependencies in the speech signal, while maintaining computational efficiency.
 
@@ -125,13 +139,19 @@ This structure enables effective modeling of both local and global dependencies 
 It adopts fixed sinusoidal positional encodings and employs weight tying between input and output token embeddings to reduce model complexity.
 Each Transformer block consists of three primary components: a multi-head self-attention module, a multi-head cross-attention module, and a position-wise feedforward module, all utilizing pre-norm residual units to enhance training stability and gradient flow.
 
-**Tokenization**: We employ a mixed tokenization strategy: Chinese characters for Chinese text and token-level [byte-pair encoding (BPE)](../_Basis/2015.08.31_BPE.md)[^27] for English text.
+**Tokenization**: We employ a mixed tokenization strategy: Chinese characters for Chinese text and token-level **byte-pair encoding (BPE)**[^27] for English text.
 The total vocabulary size is 7,832, comprising 1,000 English BPE tokens, 6,827 Chinese characters, and 5 special tokens.
 
 We investigated various sizes of ***FireRedASR-AED***, with detailed architectural configurations presented in Table \ref{tab:model_config}, where `\#Params` denotes the number of parameters.
 Unless otherwise specified, ***FireRedASR-AED*** refers to ***FireRedASR-AED-L***.
 
+</td><td>
+
+</td></tr></table>
+
 ### FireRedASR-LLM: Encoder-Adapter-LLM-based ASR model
+
+<table><tr><td width="50%">
 
 ***FireRedASR-LLM*** is also an end-to-end ASR model but designed to integrate robust speech processing capabilities of ***FireRedASR-AED*** with the superior language capabilities of LLM.
 It comprises three core components: a Conformer-based audio Encoder, a lightweight audio-text alignment Adapter and a pre-trained text-based LLM, forming what we term the Encoder-Adapter-LLM architecture.
@@ -148,21 +168,27 @@ Even after temporal subsampling from 10ms to 40ms, the output of the encoder rem
 Therefore, we incorporate an additional frame splicing operation at the beginning of the adapter.
 This operation further reduces the temporal resolution from 40ms to 80ms per frame, thereby decreasing sequence length and improving the computational efficiency for the LLM.
 
-**LLM Initialization and Processing**: The LLM component of ***FireRedASR-LLM*** is initialized with pre-trained weights from [Qwen2-7B-Instruct](../TextLM/Qwen2.md)[^28], a notable open-source LLM.
+**LLM Initialization and Processing**: The LLM component of ***FireRedASR-LLM*** is initialized with pre-trained weights from **Qwen2-7B-Instruct**[^28], a notable open-source LLM.
 During training, the input of ***FireRedASR-LLM*** consists of a triplet: (prompt, speech, transcript).
 The encoder and adapter produces a speech embedding ${E}_{S}$, while the prompt and transcript are tokenized and embedded by the LLM into prompt embedding ${E}_{P}$ and transcript embedding ${E}_{T}$.
 These embeddings are concatenated as $({E}_{P}, {E}_{S}, {E}_{T})$ and processed by the subsequent layers of LLM.
 During inference, the input is reduced to $({E}_{P},{E}_{S})$, enabling the LLM to execute next-token-prediction and generate recognized text from speech.
 
 **Training Strategy**: We employ a carefully designed training strategy that balances adaptation and preservation of pre-trained capabilities: the encoder and adapter are fully trainable, while the majority of LLM parameters remain fixed.
-We incorporate trainable LLM [Low-Rank Adaptation (LoRA)](../../Modules/LoRA/2021.06.17_LoRA.md)[^29] to efficiently fine-tune the LLM.
+We incorporate trainable LLM **Low-Rank Adaptation (LoRA)**[^29] to efficiently fine-tune the LLM.
 This strategy ensures that the encoder and adapter are adequately trained to map speech features into the semantic space of LLM, while preserving its pre-trained capabilities.
 The training objective is based on cross-entropy loss, with the loss computed only over the transcript portion of the input, ignoring the prompt and speech embeddings.
 
 We investigated various sizes of ***FireRedASR-LLM***, with detailed architectural configurations presented in Table \ref{tab:model_config}.
 Unless otherwise specified, ***FireRedASR-LLM*** refers to ***FireRedASR-LLM***-L.
 
+</td><td>
+
+</td></tr></table>
+
 ## 4·Experiments & 5·Results: 实验 & 结果
+
+<table><tr><td width="50%">
 
 In this section, we conduct a comprehensive evaluation of ***FireRedASR-LLM*** and ***FireRedASR-AED*** models, with a primary focus on their performance in Mandarin speech recognition.
 The evaluation is structured into three parts to systematically assess the capabilities and generalization abilities of the models.
@@ -174,17 +200,28 @@ Third, we evaluate the models' performance on Chinese dialects and English speec
 
 **Metrics**: We use Character Error Rate (CER) for evaluating Chinese speech and singing lyrics recognition, and Word Error Rate (WER) for English.
 
+</td><td>
+
+</td></tr></table>
+
 ### Evaluation on Public Mandarin ASR Benchmarks
 
-We benchmark ***FireRedASR-LLM*** and ***FireRedASR-AED*** compared to several recently released large-scale ASR models, including [Seed-ASR](2024.07.05_Seed-ASR.md)[^5], [SenseVoice-L](2024.07.04_SenseVoice.md)[^4], [Qwen-Audio](../SpokenDialogue/2023.11.14_Qwen-Audio.md)[^2], [Paraformer-Large](2022.06.16_Paraformer.md)[^30], and [Whisper-Large-v3](../SpeechLM/2022.12.06_Whisper.md)[^1].
-The evaluation is conducted on four widely-used public Chinese Mandarin ASR test sets: 1) [AISHELL-1](../../Datasets/2017.09.16_AISHELL-1.md)[^31] test set (aishell1); 2) [AISHELL-2](../../Datasets/2018.08.31_AISHELL-2.md)[^32] iOS version test set (aishell2); 3) [WenetSpeech](../../Datasets/2021.10.07_WenetSpeech.md)[^33] Internet domain test set (ws\_net); 4) WenetSpeech meeting domain test set (ws\_meeting).
-The results for the comparative models are sourced from their respective publications, with Whisper-Large-v3 results taken from the [SenseVoice-L](2024.07.04_SenseVoice.md)[^4] and WenetSpeech results of Qwen-Audio derived from the [Seed-ASR](2024.07.05_Seed-ASR.md)[^5].
+<table><tr><td width="50%">
+
+We benchmark ***FireRedASR-LLM*** and ***FireRedASR-AED*** compared to several recently released large-scale ASR models, including **Seed-ASR**[^5], **SenseVoice-L**[^4], **Qwen-Audio**[^2], **Paraformer-Large**[^30], and **Whisper-Large-V3**[^1].
+The evaluation is conducted on four widely-used public Chinese Mandarin ASR test sets:
+1) **AISHELL-1**[^31] test set (aishell1);
+2) **AISHELL-2**[^32] iOS version test set (aishell2);
+3) **WenetSpeech**[^33] Internet domain test set (ws\_net);
+4) WenetSpeech meeting domain test set (ws\_meeting).
+
+The results for the comparative models are sourced from their respective publications, with **Whisper-Large-V3** results taken from the **SenseVoice-L**[^4] and WenetSpeech results of Qwen-Audio derived from the **Seed-ASR**[^5].
 
 As illustrated in Table \ref{tab:test_public}, both ***FireRedASR-LLM*** and ***FireRedASR-AED*** outperform Seed-ASR.
 Notably, ***FireRedASR-LLM*** achieves an 8.4\% relative CER reduction (CERR) compared to Seed-ASR when averaged across all four test sets (Average-4).
-Seed-ASR, a state-of-the-art large ASR models but not open-source, has been trained with 7.7 million hours in its self-supervised learning stage and 0.562 million hours in its supervised fine-tuning stage, with nearly 2B parameters in its encoder and over 10B parameters in its LLM ([Seed-ASR](2024.07.05_Seed-ASR.md)[^5]).
+Seed-ASR, a state-of-the-art large ASR models but not open-source, has been trained with 7.7 million hours in its self-supervised learning stage and 0.562 million hours in its supervised fine-tuning stage, with nearly 2B parameters in its encoder and over 10B parameters in its LLM (**Seed-ASR**[^5]).
 In contrast, ***FireRedASR-AED*** contains only 1.1B parameters and ***FireRedASR-LLM*** includes 8.3B parameters, highlighting the effectiveness of our models' architecture, training strategies and datasets.
-When compared to other models, most of which are open-source, ***FireRedASR-AED*** achieves a 29\%-68\% CERR with fewer parameters than Whisper-Large-v3, SenseVoice-L, and Qwen-Audio.
+When compared to other models, most of which are open-source, ***FireRedASR-AED*** achieves a 29\%-68\% CERR with fewer parameters than **Whisper-Large-V3**, SenseVoice-L, and Qwen-Audio.
 
 **Observation of Scaling Law**: Recent studies in LLMs have demonstrated that model performance typically improves with increased model size, known as the scaling law [^34].
 As shown in \ref{tab:test_size}, we investigate the scaling behavior of our models with different model sizes, as detailed in Table \ref{tab:model_config}.
@@ -195,7 +232,13 @@ The encoder size increases from 86M to 710M parameters, with minimal changes in 
 This exhibits similar scaling patterns and leads to consistent performance improvements, with an overall 7.3\% CERR from XS (3.29\%) to L (3.05\%) configuration.
 These results demonstrate the effectiveness of our scaling strategies and suggest the potential for further improvements with larger model capacities.
 
+</td><td>
+
+</td></tr></table>
+
 ### Evaluation on Multi-source Mandarin Speech and Singing Benchmarks
+
+<table><tr><td width="50%">
 
 To comprehensively evaluate the capabilities of ***FireRedASR-LLM*** and ***FireRedASR-AED***, we conduct extensive testing on both multi-source Mandarin speech recognition and singing lyrics recognition.
 The speech test sets are carefully curated from five diverse scenarios: short videos, live streaming, auto-captioning, voice input, and intelligent assistant, ensuring broad coverage of real-world applications.
@@ -214,21 +257,33 @@ This remarkable improvement in singing lyrics recognition demonstrates the robus
 Notably, ***FireRedASR-AED*** also maintains significant advantages over other baseline systems in both speech and singing lyrics recognition tasks.
 These results convincingly demonstrate that both ***FireRedASR-AED*** and ***FireRedASR-LLM*** have achieved superior industrial-grade performance, with particular strength in handling diverse acoustic conditions and specialized tasks like singing lyrics recognition.
 
+</td><td>
+
+</td></tr></table>
+
 ### Evaluation on Public Chinese Dialect and English ASR Benchmarks
+
+<table><tr><td width="50%">
 
 ***FireRedASR-LLM*** and ***FireRedASR-AED*** exhibit strong generalization capabilities, achieving impressive results on Chinese dialect and English speech recognition despite being primarily designed for Mandarin ASR.
 To demonstrate the models' effectiveness beyond standard Mandarin, we evaluate their performance on several widely-adopted public benchmarks.
 To the best of our knowledge, we compare our models with the previous SOTA open-source models on these respective test sets.
 
-For Chinese dialect speech recognition, we evaluate our models on the [KeSpeech](../../Datasets/KeSpeech.md)[^35] test set.
-According to the recently released report ([Baichuan-Omni](../SpokenDialogue/2024.10.11_Ocean-Omni.md)[^36]), existing models including Baichuan-omni, Qwen2-Audio-Instruct, and Whisper-Large-v3 (with parameter sizes of 7B+, 7B+, and 1.5B respectively) achieve average CERs of 6.7\%, 9.9\%, and 44\% on KeSpeech.
+For Chinese dialect speech recognition, we evaluate our models on the **KeSpeech**[^35] test set.
+According to the recently released report (**Baichuan-Omni**[^36]), existing models including **Baichuan-Omni**, **Qwen2-Audio-Instruct**, and **Whisper-Large-V3** (with parameter sizes of 7B+, 7B+, and 1.5B respectively) achieve average CERs of 6.7\%, 9.9\%, and 44\% on KeSpeech.
 As shown in Table \ref{tab:test_other}, both ***FireRedASR-LLM*** and ***FireRedASR-AED*** significantly outperform these models, achieving CERs of 3.56\% and 4.48\% respectively.
 
-For English speech recognition, we evaluate our models on the widely-adopted [LibriSpeech](../../Datasets/2015.04.19_LibriSpeech.md)[^37] test sets (test-clean and test-other).
-Whisper-Large-v3, a popular open-source multilingual ASR model trained on 5 million hours of audio data, achieves WERs of 1.82\% and 3.50\% on test-clean and test-other respectively, as reported in [FunAudioLLM](../SpeechLM/2024.07.04_FunAudioLLM.md)[^4].
+For English speech recognition, we evaluate our models on the widely-adopted **LibriSpeech**[^37] test sets (test-clean and test-other).
+**Whisper-Large-V3**, a popular open-source multilingual ASR model trained on 5 million hours of audio data, achieves WERs of 1.82\% and 3.50\% on test-clean and test-other respectively, as reported in **FunAudioLLM**[^4].
 Our models demonstrate competitive performance: ***FireRedASR-LLM*** achieves WERs of 1.73\% and 3.67\%, while ***FireRedASR-AED*** achieves WERs of 1.93\% and 4.44\% on the respective test sets.
 
+</td><td>
+
+</td></tr></table>
+
 ## Discussion
+
+<table><tr><td width="50%">
 
 In this section, we explore the reasons why our ***FireRedASR*** models outperform competing models.
 We attribute the superior performance to the following three factors:
@@ -236,7 +291,7 @@ We attribute the superior performance to the following three factors:
 **High-Quality and Diverse Training Data**: Our training corpus consists predominantly of professionally transcribed audio collected from real-world scenarios, which provides significantly more valuable training signals than traditional reading-style recordings in controlled environments.
 The dataset encompasses extensive variations in acoustic conditions, speakers, accents, and content domains, totaling tens of thousands of hours.
 Such diversity and scale enable our models to learn robust speech representations and linguistic patterns, leading to strong generalization.
-Our empirical studies demonstrate that one thousand hours of high-quality, human-labeled data yields better results than ten thousand hours of weakly-labeled data (e.g., from video captions, OCR results, or ensemble ASR outputs), explaining our advantage over Whisper-like models.
+Our empirical studies demonstrate that one thousand hours of high-quality, human-labeled data yields better results than ten thousand hours of weakly-labeled data (e.g., from video captions, OCR results, or ensemble ASR outputs), explaining our advantage over **Whisper**-like models.
 Moreover, the inclusion of singing data in our corpus contributes to our significant performance improvements over baseline models in handling musical content.
 
 **Optimized Training Strategy**: When scaling ***FireRedASR-AED*** from 140M to 1.1B parameters, we identified regularization and learning rate as critical factors affecting model convergence.
@@ -248,11 +303,15 @@ Furthermore, larger models benefit from reduced learning rates, making it crucia
 **Efficient ASR Framework**: Our architectural choices were informed by extensive experimentation and prior work.
 While our previous Two-pass Transducer-based model[^39] [^40] achieved reasonable performance across various ASR models with millions of parameters, it exhibited scaling limitations and high sensitivity to hyperparameters, with the Prediction Network component prone to overfitting.
 The Transducer approach also imposed significant memory overhead compared to the cross-entropy loss used in ***FireRedASR***.
-Drawing inspiration from recent advances like Whisper whil
-e addressing these limitations, we adopted an attention-based encoder-decoder architecture enhanced with our implementations of Conformer and Transformer.
-Furthermore, we incorporated a simple yet effective adapter design inspired by recent works ([Qwen-Audio](../SpokenDialogue/2023.11.14_Qwen-Audio.md)[^2]; [Qwen2-Audio](../SpokenDialogue/2024.07.15_Qwen2-Audio.md)[^3]; [Seed-ASR](2024.07.05_Seed-ASR.md)[^5]; [Speech-LLaMA](2023.07.08_Speech-LLaMA.md)[^10]; [AudioPaLM](../SpeechLM/2023.06.22_AudioPaLM.md)[^11]; [Second-Pass Reranking & Deep LLM-Fusion](2023.06.28_Prompting_LLMs_for_Zero-Shot_Domain_Adaptation_in_Speech_Recognition.md)[^12]; [SLM](../SpeechLM/2023.09.30_SLM.md)[^13]; [COSMIC](../SpeechLM/2023.11.03_COSMIC.md)[^14]; [^15]; [SALM](../SpeechLM/2023.10.13_SALM.md)[^16]; [^17]; [^18]; [SLAM-ASR](2024.02.13_SLAM-ASR.md)[^19]), facilitating efficient model adaptation and research iteration.
+Drawing inspiration from recent advances like **Whisper** while addressing these limitations, we adopted an attention-based encoder-decoder architecture enhanced with our implementations of Conformer and Transformer.
+Furthermore, we incorporated a simple yet effective adapter design inspired by recent works (**Qwen-Audio**[^2]; **Qwen2-Audio**[^3]; **Seed-ASR**[^5]; **Speech-LLaMA**[^10]; **AudioPaLM**[^11]; [Second-Pass Reranking & Deep LLM-Fusion](2023.06.28_Prompting_LLMs_for_Zero-Shot_Domain_Adaptation_in_Speech_Recognition.md)[^12]; **SLM**[^13]; **COSMIC**[^14]; [^15]; **SALM**[^16]; [^17]; [^18]; **SLAM-ASR**[^19]), facilitating efficient model adaptation and research iteration.
+</td><td>
+
+</td></tr></table>
 
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
 
 We have presented ***FireRedASR-LLM*** and ***FireRedASR-AED***, two high-performance ASR models optimized for Mandarin.
 Through comprehensive evaluations, we demonstrate that their architectures, training strategies, and high-quality datasets can achieve state-of-the-art performance while maintaining computational efficiency.
@@ -261,19 +320,23 @@ Our extensive evaluation results confirm the strong performance of both models a
 By releasing model weights and inference code, we aim to contribute to the advancement of speech processing research.
 Future work will focus on further improving performance and expanding support for more languages and varied tasks.
 
-## Reference
+</td><td>
 
-[^1]: [**Whisper**: Robust Speech Recognition via Large-Scale Weak Supervision.](../SpeechLM/2022.12.06_Whisper.md) ICML2023.
-[^2]: [**Qwen-Audio**: Advancing Universal Audio Understanding via Unified Large-Scale Audio-Language Models.](../SpokenDialogue/2023.11.14_Qwen-Audio.md) ArXiv:2311.07919
-[^3]: [**Qwen2-Audio** Technical Report.](../SpokenDialogue/2024.07.15_Qwen2-Audio.md) ArXiv:2407.10759.
+</td></tr></table>
+
+## 参考文献
+
+[^1]: [**Whisper**: Robust Speech Recognition via Large-Scale Weak Supervision.](2022.12.06_Whisper.md) ICML2023.
+[^2]: [**Qwen-Audio**: Advancing Universal Audio Understanding via Unified Large-Scale Audio-Language Models.](../SpeechLM/ST2T/2023.11.14_Qwen-Audio.md) ArXiv:2311.07919
+[^3]: [**Qwen2-Audio** Technical Report.](../SpeechLM/ST2T/2024.07.15_Qwen2-Audio.md) ArXiv:2407.10759.
 [^4]: [**FunAudioLLM (SenseVoice)**: Voice Understanding and Generation Foundation Models for Natural Interaction between Humans and LLMs.](../SpeechLM/2024.07.04_FunAudioLLM.md) ArXiv:2407.04051.
 [^5]: [**Seed-ASR**: Understanding Diverse Speech and Contexts with LLM-Based Speech Recognition.](2024.07.05_Seed-ASR.md) ArXiv:2407.04675.
-[^6]: [**Survey** Recent Advances in End-to-End Automatic Speech Recognition.](../../Surveys/Recent_Advances_in_End-to-End_Automatic_Speech_Recognition.md) APSIPA TSIP 2022.
-[^7]: [**Survey** End-to-End Speech Recognition: A Survey.](../../Surveys/End-to-End_Speech_Recognition__A_Survey.md) IEEE/ACM@TASLP 2023.
-[^8]: [**Google USM**: Scaling Automatic Speech Recognition Beyond 100 Languages.](../SpeechLM/2023.03.02_Google_USM.md) ArXiv:2303.01037.
+[^6]: [**Survey** Recent Advances in End-to-End Automatic Speech Recognition.](2021.11.02__Survey__Recent_Advances_in_End-to-End_Automatic_Speech_Recognition_(27P).md) APSIPA TSIP 2022.
+[^7]: [**Survey** End-to-End Speech Recognition: A Survey.](2023.03.03__Survey__End-to-End_Speech_Recognition_(27P).md) IEEE/ACM@TASLP 2023.
+[^8]: [**Google USM**: Scaling Automatic Speech Recognition Beyond 100 Languages.](2023.03.02_Google_USM.md) ArXiv:2303.01037.
 [^9]: [**TouchASP**: Elastic Automatic Speech Perception that Everyone Can Touch.](../_Basis/2024.12.20_TouchASP.md) ArXiv:2412.15622.
-[^10]: [**Speech-LLaMA**: On Decoder-Only Architecture for Speech-to-Text and Large Language Model Integration](../ASR/2023.07.08_Speech-LLaMA.md) ASRU 2023.
-[^11]: [**AudioPaLM**: A Large Language Model that Can Speak and Listen.](../SpeechLM/2023.06.22_AudioPaLM.md) ArXiv:2306.12925.
+[^10]: [**Speech-LLaMA**: On Decoder-Only Architecture for Speech-to-Text and Large Language Model Integration](2023.07.08_Speech-LLaMA.md) ASRU 2023.
+[^11]: [**AudioPaLM**: A Large Language Model that Can Speak and Listen.](../SpeechLM/ST2ST/2023.06.22_AudioPaLM.md) ArXiv:2306.12925.
 [^12]: [**Second-Pass Reranking & Deep LLM-Fusion**: Prompting Large Language Models for Zero-Shot Domain Adaptation in Speech Recognition.](2023.06.28_Prompting_LLMs_for_Zero-Shot_Domain_Adaptation_in_Speech_Recognition.md) ASRU 2023.
 [^13]: [**SLM**: Bridge the Thin Gap between Speech and Text Foundation Models.](../SpeechLM/2023.09.30_SLM.md) ASRU 2023.
 [^14]: [**COSMIC**: Data Efficient Instruction-Tuning for Speech In-Context Learning](../SpeechLM/2023.11.03_COSMIC.md) ArXiv:2311.02248.
@@ -287,10 +350,10 @@ Future work will focus on further improving performance and expanding support fo
 [^22]: End-to-End Attention-Based Large Vocabulary Speech Recognition. ICASSP2016.
 [^23]: [**LAS** Listen, Attend and Spell: A Neural Network for Large Vocabulary Conversational Speech Recognition.](2015.08.05_LAS.md) ICASSP2016.
 [^24]: [**Conformer**: Convolution-Augmented Transformer for Speech Recognition.](2020.05.16_Conformer.md) ArXiv:2005.08100.
-[^25]: [**Transformer**: Attention is All You Need.](../_Transformer/2017.06.12_Transformer.md) NeurIPS2017.
-[^26]: [**Transformer-XL**: Attentive Language Models Beyond a Fixed-Length Context.](../_Transformer/Transformer-XL.md) ArXiv:1901.02860.
+[^25]: [**Transformer**: Attention is All You Need.](../_Basis/2017.06.12_Transformer.md) NeurIPS2017.
+[^26]: [**Transformer-XL**: Attentive Language Models Beyond a Fixed-Length Context.](../_Basis/Transformer-XL.md) ArXiv:1901.02860.
 [^27]: [**BPE**: Neural Machine Translation of Rare Words with Subword Units.](../_Basis/2015.08.31_BPE.md) ArXiv:1508.07909.
-[^28]: [**Qwen2** Technical Report](../TextLM/Qwen2.md) ArXiv:2407.10671.
+[^28]: [**Qwen2** Technical Report](../TextLM/2024.07.15_Qwen2.md) ArXiv:2407.10671.
 [^29]: [**LoRA**: Low-Rank Adaptation of Large Language Models.](../../Modules/LoRA/2021.06.17_LoRA.md) ArXiv:2106.09685.
 [^30]: [**Paraformer**: Fast and Accurate Parallel Transformer for Non-Autoregressive End-to-End Speech Recognition.](2022.06.16_Paraformer.md) ArXiv:2206.08317.
 [^31]: [**AISHELL-1**: An Open-Source Mandarin Speech Corpus and a Speech Recognition Baseline.](../../Datasets/2017.09.16_AISHELL-1.md) O-COCOSDA 2017.
@@ -298,7 +361,7 @@ Future work will focus on further improving performance and expanding support fo
 [^33]: [**WenetSpeech**: A 10000+ Hours Multi-Domain Mandarin Corpus for Speech Recognition.](../../Datasets/2021.10.07_WenetSpeech.md) ICASSP2022.
 [^34]: Scaling Laws for Neural Language Models. ArXiv:2001.08361.
 [^35]: [**KeSpeech**: An Open Source Speech Dataset of Mandarin and Its Eight Subdialects.](../../Datasets/KeSpeech.md) NeurIPS Dataset & Benchmark Track 2021.
-[^36]: [**Baichuan-Omni** Technical Report.](../SpokenDialogue/2024.10.11_Ocean-Omni.md) ArXiv:2106.09685.
+[^36]: [**Baichuan-Omni** Technical Report.](../SpeechLM/Interaction/2024.10.11_Ocean-Omni.md) ArXiv:2106.09685.
 [^37]: [**LibriSpeech**: An ASR Corpus Based on Public Domain Audio Books.](../../Datasets/2015.04.19_LibriSpeech.md) ICASSP2015.
 [^38]: SpecAugment: A Simple Data Augmentation Method for Automatic Speech Recognition. ArXiv:1904.08779.
 [^39]: Sequence Transduction with Recurrent Neural Networks. ArXiv:1211.3711.
