添加 XY-Tokenizer 方法

--- a/Models/Tokenizers/2025.06.29_XY-Tokenizer.md
+++ b/Models/Tokenizers/2025.06.29_XY-Tokenizer.md
@@ -98,9 +98,114 @@ Specifically, we used the pre-trained Whisper, HuBERT, and WavLM models as \text
 The experimental setup and details are provided in Appendix~\ref{appendix:encoder_chosen_exp_settings}.
 As shown in Table~\ref{table:preliminary_experiment_results}, Whisper achieves a superior reconstruction performance, effectively preserving paralinguistic information, such as speaker timbre and acoustic details.
 In contrast, HuBERT and WavLM exhibit limitations in retaining certain aspects of speaker timbre and fine-grained acoustic details.
-Furthermore, Whisper's pretraining on ASR tasks aligns closely with the LLM-based tasks employed in our codec, facilitating better text-speech alignment. Based on these findings, we selected Whisper to initialize the encoder of our proposed XY-Tokenizer and further fine-tuned it for our codec training pipeline.
+Furthermore, Whisper's pretraining on ASR tasks aligns closely with the LLM-based tasks employed in our codec, facilitating better text-speech alignment.
+Based on these findings, we selected Whisper to initialize the encoder of our proposed XY-Tokenizer and further fine-tuned it for our codec training pipeline.
 
 ## 3·方法
+
+### 3.1·XY-Tokenizer
+
+#### 动机
+
+An ideal speech codec should effectively balance two goals: high-fidelity audio reconstruction and strong semantic alignment with text~\citep{zhang2024speechtokenizerunifiedspeechtokenizer, yang2024uniaudio15largelanguage}.
+However, these two objectives often conflict, as optimizing for one can degrade the other~\citep{defossez2024moshi}.
+Our empirical analysis, as shown in Table~\ref{table:empirical_analysis_of_shared_params}, shows that decreasing the number of shared parameters between semantic and acoustic modeling pathways effectively mitigates the trade-off between high-fidelity audio reconstruction and strong semantic alignment.
+Moreover, semantic modeling can be effectively approached through automatic speech recognition (ASR) tasks, while acoustic modeling aligns closely with reconstruction through a codec decoder.
+To this end, we propose a dual-channel codec architecture that jointly models semantic and acoustic information in a multi-task setup, combining ASR and audio reconstruction, with shared parameters limited to the residual vector quantization (RVQ) module and its adjacent components.
+
+#### 编码器
+
+The encoder comprises two parallel branches: a \textbf{semantic channel} and an \textbf{acoustic channel}, both processing mel-spectrogram inputs at 100 Hz.
+Each channel is initialized with a whisper encoder~\citep{radford2022robustspeechrecognitionlargescale}, with the semantic encoder's parameters fixed and the acoustic encoder's parameters trainable.
+The semantic channel extracts linguistic features, while the acoustic channel captures paralinguistic information.
+The outputs of both channels are concatenated and further processed to produce the final encoder output.
+Additional details of the encoder architecture are provided in Appendix~\ref{appendix:model_details}.
+
+#### 量化器
+
+We employ a residual vector quantization (RVQ) module~\citep{zeghidour2021soundstream} with 8 layers operating on the encoder output at a temporal resolution of 12.5 Hz.
+Each layer uses a codebook of size 1024, resulting in a total bitrate of 1 kbps.
+The quantizer is integrated with adapter and convolution modules, with details provided in Appendix~\ref{appendix:model_details}.
+
+#### 解码器
+
+The decoder consists of two parallel branches: a \textbf{semantic channel} and an \textbf{acoustic channel}, both processing the quantized encoder output.
+The semantic channel, a decoder-only large language model, generates text transcriptions, while the acoustic channel reconstructs the waveform.
+For details of decoder, see Appendix~\ref{appendix:model_details}.
+
+### 3.2·两阶段训练策略
+
+To streamline the training process and enhance efficiency, we propose a two-stage training strategy, consisting of a pre-training stage and a post-training stage.
+In the pre-training stage, we employ multi-task learning to simultaneously model semantic features and coarse acoustic features.
+In the post-training stage, we focus on modeling fine-grained acoustic features.
+This section elaborates on these stages.
+
+#### 预训练阶段
+
+
+In the pre-training stage, we focus on two tasks: audio reconstruction and automatic speech recognition (ASR).
+All model parameters are trainable, except for the weights of the semantic encoder, initialized from whisper encoder~\citep{radford2022robustspeechrecognitionlargescale}, and the large language model (LLM) which is initialized from Qwen2.5~\citep{yang2024qwen2}.
+To align with text generation, we use the cross-entropy loss for the LLM, defined as:
+\[
+\mathcal{L}_{{asr}} = -\sum_{t=1}^N \log p(\mathbf{y}_t \mid \mathbf{y}_{<t}, \mathbf{f}; \theta_{{LLM}})
+\]
+where \(\mathbf{y}_t\) is the predicted text token at time step \( t \), \(\mathbf{y}_{<t}\) denotes the sequence of preceding tokens, \( \mathbf{f} \) represents the audio features input to the LLM, \( N \) is the total number of predicted text tokens, and \( \theta_{{LLM}} \) denotes the parameters of the LLM.
+
+For modeling acoustic features, we employ a multi-scale mel-spectrogram reconstruction loss:
+\[
+\mathcal{L}_{{recon}} = \sum_{i \in e} \left\| S_i(\mathbf{x}) - S_i(\mathbf{\hat{x}}) \right\|_1
+\]
+where \( S_i \) is the mel-spectrogram at scale \( i \), computed using a normalized short-time fourier transform (STFT) with a window size of \( 2^i \) and a hop length of \( 2^{i} / 4 \).
+The set of scales is defined as \( e = \{5, \dots, 11\} \).
+Here, \( \mathbf{x} \) is the ground-truth audio waveform, and \( \mathbf{\hat{x}} \) is the predicted waveform from the acoustic decoder.
+No waveform-based reconstruction loss is used.
+
+Additionally, we incorporate a commitment loss to ensure effective quantization:
+\[
+\mathcal{L}_{{commit}} = \sum_{i=1}^{N_q} \left\| \mathbf{z}_i - sg(q_i(\mathbf{z}_i)) \right\|_1
+\]
+where \( \mathbf{z}_i \) is the input to the \( i \)-th layer of the quantizer, \( q_i(\mathbf{z}_i) \) is its quantized output, \( N_q \) is the number of quantized vectors, and \( sg \) denotes the stop-gradient operation, which prevents gradients from propagating to the quantizer's codebook.
+
+The total loss for the pre-training stage is a weighted combination of individual losses:
+\[
+\mathcal{L}_{{pretraining}} = \lambda_{{asr}} \mathcal{L}_{{asr}} + \lambda_{{recon}} \mathcal{L}_{{recon}} + \lambda_{{commit}} \mathcal{L}_{{commit}}
+\]
+where \( \lambda_{{asr}}, \lambda_{{recon}}, \lambda_{{commit}} \) are hyperparameters that balance the weights of each loss term.
+
+#### 后训练阶段
+
+After the pre-training stage, we obtain an encoder capable of producing rich semantic features.
+However, the codec's output may contain artifacts, which significantly degrade perceptual quality and listening experience.
+To address this, the post-training stage focuses on modeling fine-grained audio details.
+The approach is detailed below.
+
+We adopt a generative adversarial network (GAN) framework for post-training.
+For the generator, which corresponds to the codec, we fix the encoder and quantizer, discard the semantic decoder used in the pre-training stage, and keep all other parameters consistent with the pre-training stage, with these parameters remaining trainable.
+For the discriminator, we employ multi-period discriminator (MPD)~\citep{kong2020hifi}, multi-scale discriminator (MSD)~\citep{kumar2019melgan}, and multi-scale short-time fourier transform discriminator (MS-STFTD)~\citep{defossez2022high} to model higher-level features and improve the perceptual quality of the generated audio.
+
+The discriminator loss follows the least squares GAN (LSGAN) formulation~\citep{mao2017least}, given by:
+\[
+\mathcal{L}_D(\mathbf{x}, \hat{\mathbf{x}}) = \frac{1}{K} \sum_{k=1}^{K}  (1 - D_k(\mathbf{x}))^2 + D_k^2(\hat{\mathbf{x}})
+\]
+where \( D_k \) represents the \( k \)-th discriminator (from MPD, MSD, or MS-STFTD), \( K \) is the total number of discriminators, \( \mathbf{x} \) is the ground-truth audio, and \( \hat{\mathbf{x}} \) is the predicted audio.
+
+For the generator loss, we use the same multi-scale mel-spectrogram reconstruction loss as in the pre-training stage, denoted \( \mathcal{L}_{{recon}} \).
+Additionally, we include a feature matching loss:
+\begin{equation}
+\mathcal{L}_{{feat}}(\mathbf{x}, \hat{\mathbf{x}}) = \frac{1}{KL} \sum_{k=1}^{K} \sum_{l=1}^{L} \frac{ \left\| D_k^l(\mathbf{x}) - D_k^l(\hat{\mathbf{x}}) \right\|_1}{mean(\left\| D_k^l( \mathbf{x}) \right\|_1)}
+\label{eq:feat}
+\end{equation}
+where \( D_k^l \) denotes the feature representation from the \( l \)-th layer of the \( k \)-th discriminator, \( L \) is the number of layers per discriminator, and the mean is computed over all dimensions of \( D_k^l(\mathbf{x}) \).
+We also incorporate an adversarial loss:
+\[
+\mathcal{L}_{{adv}}(\hat{\mathbf{x}}) = \frac{1}{K} \sum_{k=1}^{K} (1 - D_k(\hat{\mathbf{x}}))^2
+\]
+
+The total generator loss is a weighted combination of these terms:
+\[
+\mathcal{L}_G(\mathbf{x}, \hat{\mathbf{x}}) = \lambda_{{recon}} \mathcal{L}_{{recon}} + \lambda_{{feat}} \mathcal{L}_{feat} + \lambda_{{adv}} \mathcal{L}_{{adv}}
+\]
+where \( \lambda_{{recon}}, \lambda_{{feat}}, \lambda_{{adv}} \) are hyperparameters that balance the contributions of each loss term.
 
 ## 4·实验
 
