添加 XY-Tokenizer 实验

--- a/Models/Tokenizers/2025.06.29_XY-Tokenizer.md
+++ b/Models/Tokenizers/2025.06.29_XY-Tokenizer.md
@@ -209,7 +209,103 @@ where \( \lambda_{{recon}}, \lambda_{{feat}}, \lambda_{{adv}} \) are hyperparame
 
 ## 4·实验
 
+### 4.1·设置
+
+#### 数据集与训练细节
+
+We trained XY-Tokenizer using the full Emilia dataset, comprising approximately 101k hours of audio data, equivalent to about 37 million (audio, transcription) pairs~\citep{he2024emilia}.
+All audio data was resampled to 16 kHz.
+In the \textbf{pre-training stage}, audio clips longer than 30 seconds were truncated to the first 30 seconds, while clips shorter than 30 seconds were padded to 30 seconds, with loss computed only on the non-padded portions.
+We utilized 32 NVIDIA H100 GPUs, each with a batch size of 4, a maximum learning rate of \( 1 \times 10^{-4} \), and trained for 500,000 steps using DeepSpeed Zero2 ~\citep{rajbhandari2020zero}.
+We used the AdamW optimizer~\citep{loshchilov2017decoupled} with weight decay of 0.01.
+In the \textbf{post-training stage}, we randomly sampled 5-second segments from each audio clip for training, using a single NVIDIA H100 GPU with a batch size of 16.
+The generator was trained with a maximum learning rate of \( 1 \times 10^{-5} \), and the discriminator with a maximum learning rate of \( 1 \times 10^{-4} \), for 250,000 steps.
+For both the \textbf{pre-training stage} and \textbf{post-training stage}, we set \(\lambda_{{recon}} = 15\).
+In the pre-training stage, we set \(\lambda_{{asr}} = 20\) and \(\lambda_{{commit}} = 1\).
+In the post-training stage, we set \(\lambda_{{feat}} = 1\) and \(\lambda_{{adv}} = 1\).
+
+#### 模型细节
+
+#### 基线模型
+
+We use SpeechTokenizer~\citep{zhang2024speechtokenizerunifiedspeechtokenizer}, Mimi~\citep{defossez2024moshi}, XCodec2.0~\citep{ye2025llasascalingtraintimeinferencetime}, and Baichuan Audio Tokenizer~\citep{li2025baichuan} as our baseline codecs, which simultaneously model semantic and acoustic information.
+Details of these models are provided in Appendix~\ref{appendix:baseline_model_details}.
+Additionally, we include BigCodec~\citep{xin2024bigcodecpushinglimitslowbitrate}, Descript Audio Codec~\citep{kumar2023highfidelityaudiocompressionimproved}, which exclusively model acoustic information.
+
+### 4.2·指标
+
+#### 重构评估
+
+To evaluate the preservation of acoustic information, we employ several metrics.
+Speaker similarity (SIM) is calculated as the cosine similarity between speaker embeddings extracted from original and reconstructed audio using a pre-trained speaker verification model\footnote{\url{https://github.com/microsoft/UniSpeech/tree/main/downstreams/speaker_verification}}.
+We also use short-time objective intelligibility (STOI)~\citep{taal2010short} to measure speech intelligibility and perceptual evaluation of speech quality (PESQ)~\citep{rix2001perceptual} to assess audio quality.
+All evaluations were conducted on the LibriSpeech test-clean subset~\citep{panayotov2015librispeech}.
+
+#### 语义评估
+
+To evaluate the semantic alignment between the codec and text, we employ an \textbf{automatic speech recognition (ASR) probing task}, adapted from the SUPERB framework~\citep{yang2021superb}, to assess the semantic quality of tokenized representations.
+We trained a downstream ASR model using \textbf{quantized embeddings}, with the pretrained codec fixed.
+These quantized embeddings are upsampled to a minimum frame rate of 50 Hz via replication before being fed into a downstream model (see Appendix~\ref{appendix:asr_probing_details} for details).
+The downstream model comprises a two-layer bidirectional LSTM optimized with CTC loss for character-level prediction~\citep{hochreiter1997long,graves2006connectionist}.
+All models are trained on the LibriSpeech train-clean-100 subset and evaluated on the LibriSpeech dev-clean subset~\citep{panayotov2015librispeech}, using word error rate (WER) as the metric for semantic performance, where a lower WER indicates better semantic alignment.
+The ASR probing task experiments are conducted with a batch size of 4, a maximum learning rate of $1\times10^{-4}$, and training for 400,000 steps.
+
 ## 5·结果
+
+### 5.1·评估结果
+
+As shown in Table~\ref{table:comparsions_between_ours_and_baselines}, XY-Tokenizer achieves SOTA-comparable performance at similar bitrates, simultaneously excelling in both speech reconstruction and semantic preservation tasks.
+
+**Speech Reconstruction**
+
+XY-Tokenizer achieves higher SIM scores than Mimi-8, SpeechTokenizer-RVQ-3 (including SpeechTokenizer-x1, SpeechTokenizer-x2, SpeechTokenizer-x3), and Baichuan Audio Tokenizer, with performance comparable to BigCodec, XCodec2.0, and SpeechTokenizer.
+These results provide preliminary evidence of the model's effectiveness in reconstructing speech.
+However, XY-Tokenizer's reconstruction quality is slightly inferior to high-bitrate codecs like DAC-8, likely due to greater information loss in low-bitrate codecs.
+We believe that low-bitrate codecs have significant potential for further enhancement in reconstruction performance.
+
+**ASR Probing Results**
+
+XY-Tokenizer exhibits text alignment performance comparable to Baichuan Audio Tokenizer.
+XY-Tokenizer's word error rate (WER) on the ASR probing task is substantially lower than that of codecs employing representation distillation, such as SpeechTokenizer, MimiCodec, and XCodec 2.0.
+This performance may be attributed to language-based ASR tasks facilitating stronger text alignment compared to semantic distillation approaches, while also creating less conflict with reconstruction objectives.
+Conversely, codecs like DAC and BigCodec, which lack supervised text alignment during pretraining, exhibit higher WER in ASR probing tasks, likely due to a significant disparity between their compressed representations and textual content.
+
+**Semantic-Acoustic Comprehensive Analysis**
+
+Considering both speech reconstruction and text alignment capabilities, our proposed XY-Tokenizer achieves excellent results in both aspects.
+While SpeechTokenizer performs well in both reconstruction and semantic tasks at higher bitrates, we observe that at lower bitrates, stronger distillation supervision leads to poorer reconstruction quality.
+This indicates that representation distillation methods can cause significant conflicts between semantic and acoustic learning objectives during codec training.
+Mimi-8 and XCodec2.0 demonstrate better reconstruction metrics at comparable bitrates than SpeechTokenizer, but perform less effectively on semantic tasks, which we attribute to the inherent trade-off between representation distillation and audio reconstruction objectives.
+Our proposed XY-Tokenizer achieves favorable results in both semantic and acoustic dimensions, suggesting that it effectively mitigates the conflict between these competing tasks to a noticeable extent.
+For ablation studies on conflict resolution approaches, please refer to Section~\ref{ablation_study}.
+
+### 5.2·消融实验
+
+To evaluate the effectiveness of our proposed XY-Tokenizer in simultaneously modeling semantic and acoustic features while mitigating conflicts between these tasks, we conducted a series of ablation experiments.
+Unless otherwise specified, all ablation experiments were performed during the pre-training phase without a post-training stage, utilizing the same dataset and preprocessing methods as described in Section~\ref{exps:datasets_and_training_details}.
+We employed a global batch size of 128, a maximum learning rate of $1 \times 10^{-4}$, and trained for 200,000 steps, with all loss weights consistent with those outlined in Section~\ref{exps:datasets_and_training_details}.
+
+**Shared Parameters Cause Conflicts**
+
+In XY-Tokenizer, parameters between semantic and acoustic tasks are shared only in the residual vector quantization (RVQ) module and its adjacent components.
+To assess the effectiveness of minimizing shared parameters in reducing semantic-acoustic conflicts, we trained three models: (1) the proposed XY-Tokenizer, (2) XY-Tokenizer without a semantic encoder, where the encoder is a single-channel, trainable acoustic encoder, and (3) XY-Tokenizer without a semantic encoder, with the acoustic encoder initialized using Whisper-medium weights, maintaining a parameter count comparable to (1).
+In models (2) and (3), the semantic and acoustic tasks share both the encoder and RVQ modules.
+As shown in Table~\ref{table:ablation_of_shared_params}, all three models perform well on the ASR probing task, demonstrating that leveraging an LLM-based ASR approach enables the codec to effectively align with textual semantics.
+However, models (2) and (3) exhibit inferior performance on reconstruction metrics compared to (1), despite model (3) having a similar parameter count to (1).
+This suggests that sharing model parameters across semantic and acoustic tasks is a primary cause of task conflict.
+Thus, reducing shared parameters is an effective strategy for simultaneously achieving high-quality audio reconstruction and improved text alignment.
+
+**Fixing LLM for Enhanced Training Stability**
+
+In the pre-training stage of our XY-Tokenizer, the pretrained LLM is kept fixed.
+To explore whether allowing the LLM to be trainable could yield better results, we trained two models: (1) the proposed XY-Tokenizer with a fixed LLM, and (2) XY-Tokenizer with a trainable LLM.
+Table~\ref{table:ablation_of_llm_trainable_or_not} indicates that both models achieve comparable audio reconstruction quality.
+On the Word Error Rate (WER) of text decoded by the LLM, model (2) outperforms model (1) with a lower WER.
+However, on the ASR probing task, model (2) performs worse than model (1).
+Moreover, as training progresses, the performance of model(2) on the ASR probing task deteriorates, while model (1) remains stable.
+We hypothesize that allowing the LLM to be trainable increases the flexibility of the semantic decoder, causing the encoder's text-alignment capability to gradually shift toward the semantic decoder.
+This shift likely explains the discrepancy between the ASR probing task and LLM decoder WER performance in models (1) and (2).
+We conclude that fixing the LLM is a more appropriate approach, offering stability and effectively balancing semantic and acoustic modeling.
 
 ## 6·结论
 
