更新 XY-Tokenizer 引用

--- a/Models/Tokenizers/2025.06.29_XY-Tokenizer.md
+++ b/Models/Tokenizers/2025.06.29_XY-Tokenizer.md
@@ -451,3 +451,8 @@ Additionally, the scaling law for training speech codecs, particularly with resp
 [^Zhang2023SpeechGPT]: [SpeechGPT](../SpeechLM/Interaction/2023.05.18_SpeechGPT.md)
 [^Chu2024Qwen2]: [Qwen2](../TextLM/2024.07.15_Qwen2.md)
 [^Defossez2024Moshi]: [Moshi](../SpeechLM/Interaction/2024.09.17_Moshi.md)
+[^Zeghidour2021SoundStream]: [SoundStream](2021.07.07_SoundStream.md)
+[^Defossez2022EnCodec]: [EnCodec](2022.10.24_EnCodec.md)
+[^Kumar2023DAC]: [DAC](2023.06.11_Descript-Audio-Codec.md)
+[^Zhang2024SpeechTokenizer]: [SpeechTokenizer](../SpeechCodec/2023.08.31_SpeechTokenizer.md)
+[^Xin2024BigCodec]: [BigCodec](../SpeechCodec/2024.09.09_BigCodec.md)
