更新 XY-Tokenizer 引用

--- a/Models/Tokenizers/2025.06.29_XY-Tokenizer.md
+++ b/Models/Tokenizers/2025.06.29_XY-Tokenizer.md
@@ -481,3 +481,9 @@ Additionally, the scaling law for training speech codecs, particularly with resp
 [^Vaswani2017Transformer]: [Transformer](../_Transformer/2017.06.12_Transformer.md)
 [^Hendrycks2016GELU]: [GELU](../../Modules/Activation/GELU.md)
 [^Siuzdak2023Vocos]: [Vocos](../Vocoder/2023.03.01_Vocos.md)
+[^Kumar2019MelGAN]: [MelGAN](../Vocoder/2019.10.08_MelGAN.md)
+[^Mao2017LSGAN]: [LSGAN](../_Basis/2016.11.13_LSGAN.md)
+[^He2024Emilia]: [Emilia](../../Datasets/2024.07.07_Emilia.md)
+[^Rajbhandari2020ZeRO]: [ZeRO](../_Basis/2019.10.04_ZeRO.md)
+[^Loshchilov2017AdamW]: [AdamW](../../Modules/Optimization/2017.11.14_AdamW.md)
+[^Ye2025LLaSA]: [LLaSA/X-Codec2.0](../SpeechLM/2025.02.06_LLaSA.md)
